[gd_scene load_steps=3 format=3 uid="uid://dybwou4jjlyfh"]

[ext_resource type="Script" path="res://Item/ItemPickup/ItemPickup.gd" id="1_bhadr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejqh3"]
size = Vector2(46, 46)

[node name="ItemPickup" type="Area2D"]
collision_layer = 8
script = ExtResource("1_bhadr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ejqh3")

[node name="ItemSprite" type="Sprite2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
